css/style.css
/*
 * Globals
 */
@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;500;900&display=swap");

/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-color: #662843;
  font-family: "Noto Serif JP", serif;
  scroll-behavior: smooth;
}

body {
  padding-top: 3.5rem;
  color: #fff;
  font-size: small;
}

section {
  margin-top: -80px;
  padding-top: 80px;
}

section h2 {
  margin: 20px auto;
}

/*
 * Body
 */
.jumbotron {
  background: url(../img/top.png) center no-repeat;
  background-size: cover;
  height: 600px;
  margin-top: 1rem;
  border-radius: 0;
  color: #662843;
}

/* Card */
.card {
  background-color: #662843;
  border: none;
}

.card-body {
  padding: 1rem 3rem;
}

.card-title {
  margin-bottom: 1.5rem;
}

.card-text {
  text-align: left;
}

#items.img-fluid {
  width: 320px;
}

/* map */
.gmap {
  height: 0;
  overflow: hidden;
  padding-bottom: 80.25%;
  position: relative;
}

.gmap iframe {
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
}

/*
 * Footer
 */
.margin-footer {
  margin: 40px;
}

.mastfoot {
  color: #d3d3d3;
}

